Add basic tool for building biome classifier